--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>BookNest | Home</title>
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(135deg, #f3e7e9 0%, #e3eeff 100%);
+      color: #2d3436;
+    }
+    header {
+      background: linear-gradient(to right, #8e44ad, #3498db);
+      padding: 30px 20px;
+      text-align: center;
+      font-size: 2.5em;
+      font-weight: bold;
+      color: #fff;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+      letter-spacing: 1px;
+    }
   </style>
 </head>
 <body>
