Added nav-style1 in main

--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>BookNest | Home</title>
   <style>
+    nav {
+      background-color: #fff;
+      text-align: center;
+      padding: 15px 0;
+      box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+    }
+    nav a {
+      text-decoration: none;
+      margin: 0 20px;
+      color: #8e44ad;
+      font-weight: 600;
+      font-size: 1.1em;
+      transition: 0.3s;
+    }
+    nav a:hover {
+      color: #3498db;
+    }
   </style>
 </head>
 <body>
