Added hero-style1 in main

--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>BookNest | Home</title>
   <style>
+   .hero {
+      text-align: center;
+      padding: 80px 20px 50px;
+    }
+    .hero h1 {
+      font-size: 3.5em;
+      color: #2c3e50;
+    }
+    .hero p {
+      font-size: 1.3em;
+      color: #636e72;
+    }
   </style>
 </head>
 <body>
