Added books-style1 in main

--- a/index.html
+++ b/index.html
@@ -5,6 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>BookNest | Home</title>
   <style>
+   .books {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 30px;
+      padding: 50px 20px;
+    }
+    .book {
+      background: #fff;
+      width: 240px;
+      padding: 20px;
+      border-radius: 18px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .book:hover {
+      transform: translateY(-10px) scale(1.03);
+      box-shadow: 0 12px 25px rgba(0, 0, 0, 0.2);
+    }
+    .book img {
+      width: 100%;
+      border-radius: 12px;
+      margin-bottom: 15px;
+    }
+    .book h3 {
+      font-size: 1.3em;
+      color: #8e44ad;
+    }
+    .book p {
+      font-size: 0.95em;
+      color: #555;
+    }
   </style>
 </head>
 <body>
