Added footer-style1 in html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>BookNest | Home</title>
   <style>
+   footer {
+      text-align: center;
+      padding: 20px;
+      background: #ecf0f1;
+      color: #7f8c8d;
+      font-size: 0.9em;
+      margin-top: 50px;
+    }
   </style>
 </head>
 <body>
