--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
   </style>
 </head>
 <body>
+ <header>📚 BookNest</header>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="booklist.html">Browse Books</a>
+  </nav>
 </body>
 </html>
