Added body-hero in html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
   </style>
 </head>
 <body>
+  <div class="hero">
+    <h1>Welcome to BookNest</h1>
+    <p>Your cozy corner for magical stories and wisdom</p>
+  </div>
 </body>
 </html>
