--- a/booklist.html
+++ b/booklist.html
@@ -4,7 +4,26 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>BookNest | Book List</title>
-  <style> 
+  <style>
+ * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(135deg, #dff9fb, #f9f7f7);
+      color: #2d3436;
+    }
+    header {
+      background: linear-gradient(to right, #00b894, #0984e3);
+      padding: 30px;
+      text-align: center;
+      color: #fff;
+      font-size: 2.5em;
+      font-weight: bold;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+    }
   </style>
   <script>
     function showAlert(title) {
