--- a/booklist.html
+++ b/booklist.html
@@ -5,6 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>BookNest | Book List</title>
   <style> 
+    nav {
+      background-color: #fff;
+      text-align: center;
+      padding: 15px;
+      box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+    }
+    nav a {
+      text-decoration: none;
+      margin: 0 20px;
+      color: #00b894;
+      font-weight: 600;
+      font-size: 1.1em;
+      transition: 0.3s;
+    }
+    nav a:hover {
+      color: #0984e3;
+    }
+
   </style>
   <script>
     function showAlert(title) {
