--- a/booklist.html
+++ b/booklist.html
@@ -4,7 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>BookNest | Book List</title>
-  <style> 
+  <style>
+.booklist {
+      padding: 50px 20px;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 25px;
+    }
   </style>
   <script>
     function showAlert(title) {
