--- a/booklist.html
+++ b/booklist.html
@@ -5,6 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>BookNest | Book List</title>
   <style> 
+.card {
+      background-color: #fff;
+      padding: 25px;
+      border-radius: 18px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+    .card:hover {
+      transform: translateY(-8px) scale(1.02);
+      box-shadow: 0 12px 25px rgba(0,0,0,0.2);
+    }
+    .card h3 {
+      font-size: 1.4em;
+      color: #00b894;
+      margin-bottom: 10px;
+    }
+    .card p {
+      font-size: 1em;
+      color: #636e72;
+    }
   </style>
   <script>
     function showAlert(title) {
