--- a/booklist.html
+++ b/booklist.html
@@ -4,7 +4,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>BookNest | Book List</title>
-  <style> 
+  <style>
+ footer {
+      text-align: center;
+      padding: 20px;
+      background: #ecf0f1;
+      color: #636e72;
+      font-size: 0.9em;
+      margin-top: 50px;
+    }
   </style>
   <script>
     function showAlert(title) {
