--- a/booklist.html
+++ b/booklist.html
@@ -13,5 +13,23 @@
   </script>
 </head>
 <body>
+	<section class="booklist">
+    <div class="card" onclick="showAlert('The Moon Chronicles')">
+      <h3>The Moon Chronicles</h3>
+      <p>A tale of space, solitude, and survival.</p>
+    </div>
+    <div class="card" onclick="showAlert('Cursed Library')">
+      <h3>Cursed Library</h3>
+      <p>Unlock dark secrets in dusty pages.</p>
+    </div>
+    <div class="card" onclick="showAlert('City of Echoes')">
+      <h3>City of Echoes</h3>
+      <p>Where past whispers shape the present.</p>
+    </div>
+    <div class="card" onclick="showAlert('Digital Myths')">
+      <h3>Digital Myths</h3>
+      <p>Tech meets folklore in an epic retelling.</p>
+    </div>
+  </section>
 </body>
 </html>
