--- a/booklist.html
+++ b/booklist.html
@@ -16,7 +16,7 @@
       color: #2d3436;
     }
     header {
-      background: linear-gradient(to right, #00b894, #0984e3);
+      background: linear-gradient(to left, #00b894, #0984e3);
       padding: 30px;
       text-align: center;
       color: #fff;
