--- a/booklist.html
+++ b/booklist.html
@@ -16,13 +16,13 @@
       color: #2d3436;
     }
     header {
-      background: linear-gradient(to left, #00b894, #0984e3);
+      background: linear-gradient(to right, #00b894, #0984e3);
       padding: 30px;
       text-align: center;
       color: #fff;
       font-size: 2.5em;
       font-weight: bold;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+      box-shadow: 0 5px 15px rgba(0,0,0,0.4);
     }
 
     nav {
