--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       font-size: 2.5em;
       font-weight: bold;
       color: #fff;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+      box-shadow: 0 7px 14px rgba(0,0,0,0.2);
       letter-spacing: 1px;
     }
     nav {
@@ -92,19 +92,19 @@
       background: #ecf0f1;
       color: #7f8c8d;
       font-size: 0.9em;
-      margin-top: 50px;
+      margin-top: 49px;
     }
   </style>
 </head>
 <body>
- <header>📚 BookNest</header>
+ <header>📚 BookNest!</header>
   <nav>
     <a href="index.html">Home</a>
     <a href="booklist.html">Browse Books</a>
   </nav>
 
   <div class="hero">
-    <h1>Welcome to BookNest</h1>
+    <h1>Welcome to BookNest !</h1>
     <p>Your cozy corner for magical stories and wisdom</p>
   </div>
 
